improvement: complete mysql to inventory service

--- a/point-of-sale-app/inventory/src/main/resources/application.properties
+++ b/point-of-sale-app/inventory/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
 spring.datasource.username=springuser
 spring.datasource.password=ThePassword
