ci: add step to cleanup kubernetes resources upon merge (#84)
* fix: remove incorrect delimiter in skaffold

* ci: add skaffold build step

* fix: namespace error in cloudbuild

* fix: the cloudbuild config for gcloud

* fix: the pr number prefix

* cleanup: use kubectl image

* cleanup: format cloudbuild file

* fix: pr prefix

* fix: change underscore to hyphen

* cleanup: update kubectl image in skaffold builder

* fix: kubectl command

* cleanup: add correct node version tag

* cleanup: update namepsace yaml creation

* cleanup: update the skaffold image usage

* cleanup: split the gcloud command

* cleanup: fix extra quotes

* fix: split the cloudbuild step commands

* cleanup: move gcloud and skaffold into a file

* cleanup: split the exec command

* fix: add skaffold build and deploy steps

* cleanup: add timeout to build

* cleanup: remove unused image

* cleanup: remove unused file

* process: add options related t custom sa

* cleanup: write logs to bucket

* test: trigger ci

* test: trigger ci

* cleanup: remove unnecessary skaffold steps

* cleanup:migrate to new project

* cleanup:migrate to new project

* test: check builds

* test: check builds

* test: check builds

* ci: add cleanup step

* ci: fix merge commits

* ci: add steps to deploy main to staging

* test: check builds

* ci: split the deploy steps

* test: check builds

* test: check builds

* test: check builds

* ci: remove the maven clean

* ci: fix repo name

* ci: fix repo name

* ci: comment the artifact maven plugin

* ci: add mvn clean step before skaffold

* ci: run the maven wrapper

* ci run the mvnw first

* ci: remove mvnw

* ci: remove mvnw

* ci: make mvnw executable

* ci: add mvnw back

* ci: add mvnw to the merge to pr step

* doc: minor fix (#87)

* doc: test pr (#88)

* doc: minor fix

* test: check builds

* test: check builds

* fix: remove maven clean


--- a/.github/cloudbuild/pos-push-to-main.yaml
+++ b/.github/cloudbuild/pos-push-to-main.yaml
@@ -14,25 +14,14 @@
 
 ###########################################################
 # This is a GCP CloudBuild Trigger config file. The trigger
-# is for a PullRequest event pointing to the main branch
+# is for a Push event to the main branch
 ###########################################################
 
 steps:
   ###########################################################
-  # npm install to ensure ui dependencies have no errors
-  ###########################################################
-- id: 'npm-install'
-  name: 'node:16.14.0'
-  dir: 'point-of-sale-app/ui'
-  entrypoint: 'npm'
-  args: [ 'install' ]
-  # indicates that the step need not wait for any other step
-  waitFor: [ '-' ]
-
-  ###########################################################
   # create namespace yaml for the PR
   ###########################################################
-- id: 'create-namespace.yaml'
+- id: 'create-deploy-script'
   name: ubuntu
   entrypoint: bash
   args:
@@ -42,45 +31,17 @@ steps:
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: pr-$_PR_NUMBER
+      name: $_STAGING_NS
     EOF
-  # indicates that the step need not wait for any other step
-  waitFor: [ '-' ]
 
-  ###########################################################
-  # apply the namespace.yaml to the dev cluster
-  ###########################################################
-- id: 'create-k8s-namespace'
-  name: 'gcr.io/cloud-builders/kubectl'
-  dir: '.github/cloudbuild'
-  env:
-  - 'CLOUDSDK_COMPUTE_ZONE=$_DEV_CLUSTER_ZONE'
-  - 'CLOUDSDK_CONTAINER_CLUSTER=$_DEV_CLUSTER'
-  args: [
-      'apply',
-      '-f',
-      '/workspace/namespace.yaml'
-  ]
-  # indicates that the step need not wait for any other step
-  waitFor: [ 'create-namespace.yaml' ]
-
-  ###########################################################
-  # create the skaffold deploy script
-  ###########################################################
-- id: 'create-skaffold-exec-script'
-  name: ubuntu
-  entrypoint: bash
-  args:
-  - -c
-  - |
     cat <<EOF > /workspace/deploy.sh -
     #!/bin/bash
 
-    gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER
+    gcloud container clusters get-credentials --zone $_MAIN_CLUSTER_ZONE $_MAIN_CLUSTER
+    kubectl apply -f /workspace/namespace.yaml
 
     ./mvnw install
-    skaffold run -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER --tag=pr-$_PR_NUMBER
-
+    skaffold run -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=$_STAGING_NS --tag=$COMMIT_SHA
     EOF
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
