--- a/point-of-sale-app/inventory/src/main/resources/application.properties
+++ b/point-of-sale-app/inventory/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
