--- a/point-of-sale-app/kubernetes-manifests/service-configs.yaml
+++ b/point-of-sale-app/kubernetes-manifests/service-configs.yaml
@@ -21,7 +21,7 @@ metadata:
 data:
   INVENTORY_EP: "http://inventory-svc:8080"
   PAYMENTS_EP: "http://payments-svc:8080"
-  CONNECTOR: "IN_MEMORY"
+  SPRING_PROFILES_ACTIVE: "INMEMORY"
   ACTIVE_ITEM_TYPE: "burgers"
   ITEMS: |
     items:
