--- a/point-of-sale-app/pom.xml
+++ b/point-of-sale-app/pom.xml
@@ -45,6 +45,7 @@
     <jib-maven.plugin.version>3.2.0</jib-maven.plugin.version>
     <spring-boot-maven.plugin.version>2.6.3</spring-boot-maven.plugin.version>
     <mysql.connector.version>8.0.28</mysql.connector.version>
+    <h2.embedded.db.version>2.1.210</h2.embedded.db.version>
     <maven-checkstyle.plugin.version>3.1.2</maven-checkstyle.plugin.version>
     <maven-surefire.plugin.version>2.22.2</maven-surefire.plugin.version>
     <jacoco-maven.plugin.version>0.8.7</jacoco-maven.plugin.version>
@@ -87,6 +88,12 @@
         <artifactId>mysql-connector-java</artifactId>
         <scope>runtime</scope>
         <version>${mysql.connector.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <scope>runtime</scope>
+        <version>${h2.embedded.db.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.gson</groupId>
