--- a/point-of-sale-app/inventory/pom.xml
+++ b/point-of-sale-app/inventory/pom.xml
@@ -54,6 +54,10 @@
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
     </dependency>
