--- a/point-of-sale-app/inventory/src/main/resources/application.properties
+++ b/point-of-sale-app/inventory/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_example
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+spring.datasource.url=jdbc:h2:mem:pos_db
+spring.datasource.username=demouser
+spring.datasource.password=demopassword
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
