--- a/point-of-sale-app/kubernetes-manifests/mysql-db.yaml
+++ b/point-of-sale-app/kubernetes-manifests/mysql-db.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+# [START anthosbaremetal_kubernetes_manifests_mysql_db_statefulset_mysql_db]
 kind: StatefulSet
 apiVersion: apps/v1
 metadata:
@@ -57,7 +58,9 @@ spec:
       volumes:
       - name: mysqldb
         emptyDir: {}
+# [END anthosbaremetal_kubernetes_manifests_mysql_db_statefulset_mysql_db]
 ---
+# [START anthosbaremetal_kubernetes_manifests_mysql_db_service_mysql_db]
 apiVersion: v1
 kind: Service
 metadata:
@@ -75,7 +78,9 @@ spec:
   selector:
     app: mysql-db
     tier: db
+# [END anthosbaremetal_kubernetes_manifests_mysql_db_service_mysql_db]
 ---
+# [START anthosbaremetal_kubernetes_manifests_mysql_db_configmap_mysql_db_mysql_db_config]
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -89,3 +94,4 @@ data:
   MYSQL_PASSWORD: demopassword
   MYSQL_ROOT_PASSWORD: totoallysafepassword
   MYSQL_DB_URI: jdbc:mysql://demouser:demopassword@mysql-db:3306/pos_db
+# [END anthosbaremetal_kubernetes_manifests_mysql_db_configmap_mysql_db_mysql_db_config]
