--- a/point-of-sale-app/k8-manifests/release/inventory.yaml
+++ b/point-of-sale-app/k8-manifests/release/inventory.yaml
@@ -30,7 +30,8 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: inventory
-        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/inventory
+        # TODO:: remove the snapshot tag once we make the first release
+        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/inventory:snapshot
         env:
         - name: CONNECTOR
           valueFrom:
