--- a/point-of-sale-app/k8-manifests/dev/inventory.yaml
+++ b/point-of-sale-app/k8-manifests/dev/inventory.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START anthosbaremetal_kubernetes_manifests_inventory_deployment_inventory]
+# [START anthosbaremetal_k8_manifests_dev_inventory_deployment_inventory]
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -30,7 +30,7 @@ spec:
       terminationGracePeriodSeconds: 5
       containers:
       - name: inventory
-        image: us-docker.pkg.dev/anthos-dpe-abm-edge-pos/abm-edge-pos-images/inventory
+        image: inventory
         env:
         - name: CONNECTOR
           valueFrom:
@@ -68,9 +68,9 @@ spec:
           initialDelaySeconds: 120
           periodSeconds: 5
           timeoutSeconds: 10
-# [END anthosbaremetal_kubernetes_manifests_inventory_deployment_inventory]
+# [END anthosbaremetal_k8_manifests_dev_inventory_deployment_inventory]
 ---
-# [START anthosbaremetal_kubernetes_manifests_inventory_service_inventory_svc]
+# [START anthosbaremetal_k8_manifests_dev_inventory_service_inventory_svc]
 apiVersion: v1
 kind: Service
 metadata:
@@ -83,4 +83,4 @@ spec:
   - name: http
     port: 8080
     targetPort: 8080
-# [END anthosbaremetal_kubernetes_manifests_inventory_service_inventory_svc]
+# [END anthosbaremetal_k8_manifests_dev_inventory_service_inventory_svc]
