--- a/point-of-sale-app/kubernetes-manifests/service-configs.yaml
+++ b/point-of-sale-app/kubernetes-manifests/service-configs.yaml
@@ -20,7 +20,7 @@ metadata:
 data:
   INVENTORY_EP: "http://inventory-svc:8080"
   PAYMENTS_EP: "http://payments-svc:8080"
-  SPRING_PROFILES_ACTIVE: "INMEMORY"
+  CONNECTOR: "IN_MEMORY"
   ACTIVE_ITEM_TYPE: "burgers"
   ITEMS: |
     items:
