--- a/point-of-sale-app/k8-manifests/dev/inventory.yaml
+++ b/point-of-sale-app/k8-manifests/dev/inventory.yaml
@@ -32,11 +32,11 @@ spec:
       - name: inventory
         image: inventory
         env:
-        - name: CONNECTOR
+        - name: SPRING_PROFILES_ACTIVE
           valueFrom:
             configMapKeyRef:
-              name: service-configs
-              key: CONNECTOR
+              name: spring-profile
+              key: SPRING_PROFILES_ACTIVE
         - name: ACTIVE_ITEM_TYPE
           valueFrom:
             configMapKeyRef:
