--- a/point-of-sale-app/k8-manifests/release/api-server.yaml
+++ b/point-of-sale-app/k8-manifests/release/api-server.yaml
@@ -31,7 +31,7 @@ spec:
       containers:
       - name: api-server
         # TODO:: remove the snapshot tag once we make the first release
-        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:snapshot
+        image: us-docker.pkg.dev/point-of-sale-ci/pos-images/api-server:v1-snapshot
         env:
         - name: INVENTORY_EP
           valueFrom:
