--- a/point-of-sale-app/api-server/pom.xml
+++ b/point-of-sale-app/api-server/pom.xml
@@ -29,6 +29,7 @@
   <description>The api-server proxy for the Edge Use case workload</description>
   <properties>
     <java.version>11</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -69,6 +70,7 @@
         <!--The Resources Plugin handles the copying of project resources to the output directory.-->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>3.1.0</version>
         <executions>
           <execution>
             <id>copy Vue.js UI content</id>
