--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -49,7 +49,7 @@ steps:
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: pr-$_PR_NUMBER-inmem
+      name: pr-$_PR_NUMBER-inmemory
     EOF
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
@@ -87,7 +87,7 @@ steps:
 
     ./mvnw install
     skaffold run -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER-db --tag=pr-$_PR_NUMBER-db
-    skaffold run -p dev,inmemory -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER--inmem --tag=pr-$_PR_NUMBER-db
+    skaffold run -p dev,inmemory -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER-inmemory --tag=pr-$_PR_NUMBER-inmemory
 
     EOF
   # indicates that the step need not wait for any other step
