cleanup: update app.properties for payments

--- a/point-of-sale-app/k8-manifests/dev/payments.yaml
+++ b/point-of-sale-app/k8-manifests/dev/payments.yaml
@@ -31,6 +31,12 @@ spec:
       containers:
       - name: payments
         image: payments
+        env:
+        - name: SPRING_PROFILES_ACTIVE
+          valueFrom:
+            configMapKeyRef:
+              name: spring-profile
+              key: SPRING_PROFILES_ACTIVE
         resources:
           requests:
             cpu: 100m
