fix: quotation issue in jsonpath

--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -107,8 +107,8 @@ steps:
   - 'CLOUDSDK_CONTAINER_CLUSTER=$_DEV_CLUSTER'
   args: [
     # kubectl -n pr-$_PR_NUMBER get service/$_LB_SERVICE -o jsonpath={.status.loadBalancer.ingress[0].ip} > /workspace/pr-$_PR_NUMBER.$_LB_SERVICE.ip
-      '-n', 'pr-$_PR_NUMBER', 'get', 'service', '$_LB_SERVICE', '-o',
-      'jsonpath={.status.loadBalancer.ingress[0].ip}', '>', '/workspace/$_PR_NUMBER.$_LB_SERVICE.ip',
+      '-n', 'pr-$_PR_NUMBER', 'get', 'service/$_LB_SERVICE', '-o',
+      "jsonpath='{.status.loadBalancer.ingress[0].ip}'", '>', '/workspace/$_PR_NUMBER.$_LB_SERVICE.ip',
   ]
   # indicates that the step need not wait for any other step
   waitFor: [ 'deploy-to-k8s' ]
