--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -107,9 +107,8 @@ steps:
   - -c
   - |
     gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER
-    EXTERNAL_IP=$(kubectl -n pr-$_PR_NUMBER get service/$_LB_SERVICE -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-    echo "$EXTERNAL_IP" > /workspace/pr-$_PR_NUMBER.ip
-    echo "External IP [$EXTERNAL_IP] saved to file /workspace/pr-$_PR_NUMBER.ip"
+    kubectl -n pr-$_PR_NUMBER get service/$_LB_SERVICE -o jsonpath='{.status.loadBalancer.ingress[0].ip}' > /workspace/pr-$_PR_NUMBER.ip
+    echo "External IP [$(cat /workspace/pr-$_PR_NUMBER.ip)] saved to file /workspace/pr-$_PR_NUMBER.ip"
 
   waitFor: [ 'deploy-to-k8s' ]
 
@@ -123,8 +122,7 @@ steps:
   args:
   - -c
   - |
-    EXTERNAL_IP=$(cat /workspace/pr-$_PR_NUMBER.ip)
-    gh pr comment $_PR_NUMBER --repo $_HEAD_REPO_URL --body "Access the Point-of-Sale at: $EXTERNAL_IP"
+    gh pr comment $_PR_NUMBER --repo $_HEAD_REPO_URL --body "Access the Point-of-Sale at: $(cat /workspace/pr-$_PR_NUMBER.ip)"
   waitFor: [ 'get-external-loadbalancer-ip' ]
 
 availableSecrets:
