improvement: add mysql support for the inventory service (#89)
* fix: remove incorrect delimiter in skaffold

* ci: add skaffold build step

* fix: namespace error in cloudbuild

* fix: the cloudbuild config for gcloud

* fix: the pr number prefix

* cleanup: use kubectl image

* cleanup: format cloudbuild file

* fix: pr prefix

* fix: change underscore to hyphen

* cleanup: update kubectl image in skaffold builder

* fix: kubectl command

* cleanup: add correct node version tag

* cleanup: update namepsace yaml creation

* cleanup: update the skaffold image usage

* cleanup: split the gcloud command

* cleanup: fix extra quotes

* fix: split the cloudbuild step commands

* cleanup: move gcloud and skaffold into a file

* cleanup: split the exec command

* fix: add skaffold build and deploy steps

* cleanup: add timeout to build

* cleanup: remove unused image

* cleanup: remove unused file

* process: add options related t custom sa

* cleanup: write logs to bucket

* test: trigger ci

* test: trigger ci

* cleanup: remove unnecessary skaffold steps

* cleanup:migrate to new project

* cleanup:migrate to new project

* test: check builds

* test: check builds

* test: check builds

* ci: add cleanup step

* ci: fix merge commits

* ci: add steps to deploy main to staging

* test: check builds

* ci: split the deploy steps

* test: check builds

* test: check builds

* test: check builds

* ci: remove the maven clean

* ci: fix repo name

* ci: fix repo name

* ci: comment the artifact maven plugin

* ci: add mvn clean step before skaffold

* ci: run the maven wrapper

* ci run the mvnw first

* ci: remove mvnw

* ci: remove mvnw

* ci: make mvnw executable

* ci: add mvnw back

* ci: add mvnw to the merge to pr step

* doc: minor fix (#87)

* doc: test pr (#88)

* doc: minor fix

* test: check builds

* test: check builds

* fix: remove maven clean


--- a/point-of-sale-app/k8-manifests/dev/inventory.yaml
+++ b/point-of-sale-app/k8-manifests/dev/inventory.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# [START anthosbaremetal_k8_manifests_dev_inventory_deployment_inventory]
+# [START anthosbaremetal_dev_inventory_deployment_inventory]
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -32,11 +32,11 @@ spec:
       - name: inventory
         image: inventory
         env:
-        - name: CONNECTOR
+        - name: SPRING_PROFILES_ACTIVE
           valueFrom:
             configMapKeyRef:
-              name: service-configs
-              key: CONNECTOR
+              name: spring-profile
+              key: SPRING_PROFILES_ACTIVE
         - name: ACTIVE_ITEM_TYPE
           valueFrom:
             configMapKeyRef:
@@ -68,9 +68,9 @@ spec:
           initialDelaySeconds: 120
           periodSeconds: 5
           timeoutSeconds: 10
-# [END anthosbaremetal_k8_manifests_dev_inventory_deployment_inventory]
+# [END anthosbaremetal_dev_inventory_deployment_inventory]
 ---
-# [START anthosbaremetal_k8_manifests_dev_inventory_service_inventory_svc]
+# [START anthosbaremetal_dev_inventory_service_inventory_svc]
 apiVersion: v1
 kind: Service
 metadata:
@@ -83,4 +83,4 @@ spec:
   - name: http
     port: 8080
     targetPort: 8080
-# [END anthosbaremetal_k8_manifests_dev_inventory_service_inventory_svc]
+# [END anthosbaremetal_dev_inventory_service_inventory_svc]
