--- a/.github/cloudbuild/pos-pr-open-to-main.yaml
+++ b/.github/cloudbuild/pos-pr-open-to-main.yaml
@@ -39,10 +39,17 @@ steps:
   - -c
   - |
     cat <<EOF > /workspace/namespace.yaml -
+    # namespace to deploy the mysql db based deployment
     apiVersion: v1
     kind: Namespace
     metadata:
-      name: pr-$_PR_NUMBER
+      name: pr-$_PR_NUMBER-db
+    ---
+    # namespace to deploy the inmemory h2 db based deployment
+    apiVersion: v1
+    kind: Namespace
+    metadata:
+      name: pr-$_PR_NUMBER-inmemory
     EOF
   # indicates that the step need not wait for any other step
   waitFor: [ '-' ]
@@ -79,7 +86,8 @@ steps:
     gcloud container clusters get-credentials --zone $_DEV_CLUSTER_ZONE $_DEV_CLUSTER
 
     ./mvnw install
-    skaffold run -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER --tag=pr-$_PR_NUMBER
+    skaffold run -p dev -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER-db --tag=pr-$_PR_NUMBER-db
+    skaffold run -p dev,inmemory -f=skaffold.yaml --default-repo=us-docker.pkg.dev/$PROJECT_ID/$_POS_IMAGE_REPO --namespace=pr-$_PR_NUMBER-inmemory --tag=pr-$_PR_NUMBER-inmemory
 
     EOF
   # indicates that the step need not wait for any other step
@@ -97,7 +105,7 @@ steps:
   ]
   # waitFor: commented out, so this step waits for all previous steps
 
-timeout: 900s
+timeout: 1800s
 logsBucket: 'gs://pos-cloudbuild-logs'
 options:
   logging: GCS_ONLY
