--- a/point-of-sale-app/payments/pom.xml
+++ b/point-of-sale-app/payments/pom.xml
@@ -30,6 +30,7 @@
   </description>
   <properties>
     <java.version>11</java.version>
+    <spring.boot.mainclass>com.google.abmedge.payments.PaymentsApplication</spring.boot.mainclass>
   </properties>
   <dependencies>
     <dependency>
@@ -86,6 +87,10 @@
             generate build information and start your Spring Boot application prior to running integration tests.-->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot-maven.plugin.version}</version>
+        <configuration>
+          <addResources>true</addResources>
+        </configuration>
       </plugin>
       <plugin>
         <!--The Checkstyle Plugin generates a report regarding the code style used by the developers.-->
