--- a/point-of-sale-app/payments/pom.xml
+++ b/point-of-sale-app/payments/pom.xml
@@ -30,6 +30,7 @@
   </description>
   <properties>
     <java.version>11</java.version>
+    <spring.boot.mainclass>com.google.abmedge.payments.PaymentsApplication</spring.boot.mainclass>
   </properties>
   <dependencies>
     <dependency>
@@ -46,6 +47,14 @@
       <artifactId>spring-boot-starter-log4j2</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
     </dependency>
@@ -56,6 +65,12 @@
     <dependency>
       <groupId>com.google.abm-edge</groupId>
       <artifactId>service-sdk</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.google.abm-edge</groupId>
+      <artifactId>inventory</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 
@@ -72,6 +87,10 @@
             generate build information and start your Spring Boot application prior to running integration tests.-->
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+        <version>${spring-boot-maven.plugin.version}</version>
+        <configuration>
+          <addResources>true</addResources>
+        </configuration>
       </plugin>
       <plugin>
         <!--The Checkstyle Plugin generates a report regarding the code style used by the developers.-->
